# resume-analyzer

.github/workflows/: backend-lint.yml  frontend-lint.yml
backend/express-backend/: README.md  package-lock.json  package.json
backend/express-backend/src/: index.ts
backend/express-backend/src/controllers/: auth.controller.ts
backend/express-backend/src/mail-service/: emailTemplate.ts  emails.ts  ses.config.ts
backend/express-backend/src/utils/: generateTokenAndSetCookie.ts
backend/fastapi-backend/: pyproject.toml
backend/fastapi-backend/src/: config.py  database.py  dependency.py  main.py
backend/fastapi-backend/src/core/: logging.py  server.py
backend/fastapi-backend/src/features/resume/: config.py  models.py  repository.py  router.py  schemas.py  services.py
backend/fastapi-backend/src/features/resume/utils/: ai_analyzer.py  ai_config.py  job_match_calculator.py  nlp_analyzer.py  personal_info_extractor.py  prompt_creator.py  response_formatter.py  resume_detail_extractor.py  section_extractor.py  skills_analyzer.py  text_extractor.py
backend/fastapi-backend/src/features/users/: models.py  repository.py  router.py
frontend/: package-lock.json  package.json
